--- a/TDRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TDRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,7 +133,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -897,6 +897,55 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.EditableMesh=True
 StaticMesh.Navigation=True
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.MasterPoseComponent=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.ClothingSimulation=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.SkinWeights=True
+ThirdPersonCharacter_C.VirtualTexture=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.RootMotion=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Replication=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Materials=True
+ThirdPersonCharacter_C.Default=True
+ThirdPersonCharacter_C.Tick=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+ThirdPersonCharacter_C.Variable=True
+ThirdPersonCharacter_C.Sockets=True
+ThirdPersonCharacter_C.ComponentReplication=True
+ThirdPersonCharacter_C.Events=True
 
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -996,21 +1045,22 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/K9_Assets/Models/Dagger_Ue4
-MRUItem1=/Game/K9_Assets/Katana_Finished
-MRUItem2=/Game/K9_Assets/Katana_MAT
-MRUItem3=/Game/K9_Assets/Katana_Finished_lambert1_OcclusionRoughnessMetallic
-MRUItem4=/Game/K9_Assets/Sniper_BlockOut
-MRUItem5=/Game/K9_Assets/SMG_Blockout
-MRUItem6=/Game/K9_Assets/Shotgun_BlockOut
-MRUItem7=/Game/K9_Assets/Dagger_Ue4
-MRUItem8=/Game/K9_Assets/Dagger_Mesh_Handle_Hilt_OcclusionRoughnessMetallic
-MRUItem9=/Game/K9_Assets/Handle_Hilt
-MRUItem10=/Game/K9_Assets/Dagger_Mesh_Blade_mat_OcclusionRoughnessMetallic
-MRUItem11=/Game/K9_Assets/Blade_mat
-MRUItem12=/Game/K9_Assets/Kodachi_Lp
-MRUItem13=/Game/K9_Assets/KodachI_Material1
-MRUItem14=/Game/K9_Assets/Kodachi_Lp_KodachI_Material_OcclusionRoughnessMetallic
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/K9_Assets/Models/Dagger_Ue4
+MRUItem2=/Game/K9_Assets/Katana_Finished
+MRUItem3=/Game/K9_Assets/Katana_MAT
+MRUItem4=/Game/K9_Assets/Katana_Finished_lambert1_OcclusionRoughnessMetallic
+MRUItem5=/Game/K9_Assets/Sniper_BlockOut
+MRUItem6=/Game/K9_Assets/SMG_Blockout
+MRUItem7=/Game/K9_Assets/Shotgun_BlockOut
+MRUItem8=/Game/K9_Assets/Dagger_Ue4
+MRUItem9=/Game/K9_Assets/Dagger_Mesh_Handle_Hilt_OcclusionRoughnessMetallic
+MRUItem10=/Game/K9_Assets/Handle_Hilt
+MRUItem11=/Game/K9_Assets/Dagger_Mesh_Blade_mat_OcclusionRoughnessMetallic
+MRUItem12=/Game/K9_Assets/Blade_mat
+MRUItem13=/Game/K9_Assets/Kodachi_Lp
+MRUItem14=/Game/K9_Assets/KodachI_Material1
+MRUItem15=/Game/K9_Assets/Kodachi_Lp_KodachI_Material_OcclusionRoughnessMetallic
 
 [AssetEditorToolkitTabLocation]
 /Game/K9_Assets/Kodachi_Lp_KodachI_Material_OcclusionRoughnessMetallic.Kodachi_Lp_KodachI_Material_OcclusionRoughnessMetallic=1
@@ -1023,6 +1073,7 @@ MRUItem14=/Game/K9_Assets/Kodachi_Lp_KodachI_Material_OcclusionRoughnessMetallic
 /Game/K9_Assets/Katana_Finished_lambert1_OcclusionRoughnessMetallic.Katana_Finished_lambert1_OcclusionRoughnessMetallic=1
 /Game/K9_Assets/Katana_MAT.Katana_MAT=1
 /Game/K9_Assets/Models/Dagger_Ue4.Dagger_Ue4=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 
 [MaterialEditor]
 PrimType=1
@@ -1072,5 +1123,8 @@ LastLogListing=FBXImport
 RecentlyPlaced=/Game/K9_Assets/Models/Kodachi_Lp.Kodachi_Lp;
 RecentlyPlaced=/Game/K9_Assets/Models/Katana_Finished.Katana_Finished;
 RecentlyPlaced=/Game/K9_Assets/Models/Dagger_Ue4.Dagger_Ue4;
+
+[/Script/UnrealEd.BlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
 
