--- a/TDRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TDRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,6 +134,7 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
